Apartado de productos y html

--- a/ReportesPRO/Style.css
+++ b/ReportesPRO/Style.css
@@ -1,7 +1,7 @@
 html{font-size: 20px, font-Time new roman}
-body{background-image:url(degradado.png);background-repeat: no-repeat; background-size: 100%;}
+body{background-image:url(DegradadoPRO.png);background-repeat: no-repeat; background-size: 100%;}
 h1{font-size:60px; text-align: center; color: white;}
 table{border-collapse: collapse; width: 800px}
 td{background-color: white;text-align: center;padding:6px;color:black;}
-th{background-color:#a7f8dd}
+th{background-color:#9ce9de}
 th{text-align: center; padding: 6px;}
