--- a/ReportesPRO/Style.css
+++ b/ReportesPRO/Style.css
@@ -1,7 +1,6 @@
-html{font-size: 20px, font-Time new roman}
-body{background-image:url(DegradadoPRO.png);background-repeat: no-repeat; background-size: 100%;}
-h1{font-size:60px; text-align: center; color: white;}
-table{border-collapse: collapse; width: 800px}
-td{background-color: white;text-align: center;padding:6px;color:black;}
-th{background-color:#9ce9de}
+body{background-color:#FFCDED ; background-size: 100%;}
+h1{background-image: url(titulo1.png); background-size: 100%; background-repeat: no-repeat ;font-size:60px; text-align: center; color: Black;}
+table{border:2px solid;border-collapse: collapse; width: 800px}
+td{background-color: white;text-align: center;padding:6px;color:black}
+th{background-color:#C795FF }
 th{text-align: center; padding: 6px;}
